<resources>
    <string name="app_name">Messenger</string>

    <string name="open_nav">Open navigation</string>
    <string name="close_nav">Close navigation</string>

    <string name="hint_userName">Username</string>
    <string name="hint_pass">Pass word</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_email">You don`t have account</string>
    <string name="sign_up">Sign up</string>
    <string name="login_faile">Your account does not exist, please check again </string>

    <string name="signup_firstName">First name </string>
    <string name="signup_lastName">Last name </string>
    <string name="signup_username">User name </string>
    <string name="signup_pass">Password </string>
    <string name="signup_email">Email </string>
    <string name="sigmup_signup">Sign up </string>

    <string name="main_toolbar_title">Chat </string>

    <string name="detail_user_tv_title">User infomation </string>
    <string name="detail_user_tv_finished">finished </string>
    <string name="detail_user_btn_edit_ifo">Edit info </string>
    <string name="detail_user_btn_logout">Log out </string>
    <string name="detail_user_btn_save">Save </string>
    <string name="detail_user_tv_detail">Detail </string>
    <string name="detail_user_tv_user_name">User name </string>
    <string name="detail_user_tv_email">Email </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>